	* Profiles: Added app-gecko processor
	* Profiles: Added app-sticky-notes processor
	* ice: Updated project homepage on About Dialog
	* app-ares: Removed new_transaction/commit calls on function on_complete
	* app-emule: Removed new_transaction/commit calls on function on_complete
	* app-emule: Enhanced profile::add_preferences_dat function with stricter file validation
	* app-shareaza: Removed new_transaction/commit calls on function on_complete
	* app-shareaza: Enhanced profile::add_profile_xml function with stricter file validation
	* app-utorrent: Removed new_transaction/commit calls on function on_complete
	* pymobius.ant.evidence.vfs.autofill: Removed old gecko code
	* pymobius.ant.evidence.vfs.bookmarked_urls: Removed old gecko code
	* pymobius.ant.evidence.vfs.cookies: Removed old gecko code
	* pymobius.ant.evidence.vfs.received_files: Removed old gecko code
	* pymobius.ant.evidence.vfs.visited_urls: Removed old gecko code
	* pymobius.app.gecko: Removed module
	* libmobius_core: Added new method database::new_statement_with_pattern
	* libmobius_core: Added new method io::line_reader (bytearray)
	* libmobius_core: Added new function datetime::new_datetime_from_dot_net_timestamp
	* libmobius_core: Changed vfs::fs_file::set_path to also set file name
	* libmobius_framework: Added new template function get_domain_text
	* libmobius_python: Added new function datetime.new_datetime_from_dot_net_timestamp

Mobius Forensic Toolkit 2.23
	* Added new C++ extension called "app-dcpp"
	* app-chromium: Changed post-processor to convert decrypted passwords to string
	* app-chromium: Changed to ignore login data blacklisted by user
	* app-chromium: Removed new_transaction/commit calls on function on_complete
	* app-chromium: Added support for Web Data files version 145
	* app-emuletorrent: Added support for IPv6 peer addresses
	* app-emuletorrent: Removed new_transaction/commit calls on function on_complete